--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
+    "dompurify": "^3.0.6",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
-    "dotenv": "^16.0.1",
     "express-session": "^1.17.3",
+    "jsdom": "^23.0.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.4.5",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "quill": "^1.3.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
